# elevenlabs-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/reference/: README.md  cli-endpoints.txt  endpoints-inventory.txt  refresh.sh  spec-audit-v0.2.2.md
plans/: v0.2-plan.md
plans/cli-snippets/: README.md
src/: cli.rs  client.rs  config.rs  error.rs  help.rs  main.rs  output.rs
src/commands/: agent_info.rs  agents.rs  audio.rs  config.rs  conversations.rs  history.rs  mod.rs  models.rs  music.rs  phone.rs  sfx.rs  skill.rs  stt.rs  tts.rs  update.rs  user.rs  voices.rs
src/commands/agents/: agent_config.rs  create.rs  knowledge.rs  llms.rs  mod.rs  signed_url.rs
src/commands/dubbing/: mod.rs  transcript.rs
src/commands/phone/: call.rs  mod.rs
tests/: agent_info_contract.rs  config_precedence.rs  dubbing_transcript_formats.rs  exit_code_contracts.rs  output_contracts.rs
